# gig-interveners

./: .gitignore  CLAUDE.md  README.md  Session_1_silence.parquet  batch_dampen_bvh.sh  batch_extract_bvh.sh  batch_limit_f0.sh  batch_split_audio.sh  batch_split_bvh.sh  pixi.toml  pyproject.toml
configs/: audio_delay.yaml  joint_params.yaml  joint_params2.yaml  joint_params_smplx.yaml  metrics.yaml  motion_damped.yaml  motion_damped2.yaml  pitch_shifted.yaml
exploration/: mo_control.py  mo_cross_results.py  mo_indiv_result.py  mo_pitch_sdtw.py  mo_result.py  mo_silence_checker.py
exploration/gestures/: blender_bvh_damp.py  bvh_playground.py  bvh_rotations.py
exploration/gestures/__marimo__/session/: bvh_playground.py.json
exploration/metrics/: mo_metric_exploration.py  mo_pyunicorn.py  mo_sta.py  mo_synchrony.py
gestures/: ait_bvh.py  bvh_playground.py  dampener.py
metrics/: analysis_utils.py  analyze.py  beatconsistencyEMD.py  beatconsistencyEMDtesting.ipynb  becemd.py  bvh.py  cmd_utils.py  mo_pitch_sdtw.py  sta.py  synchronization.py  syncronization.py
metrics/.ipynb_checkpoints/: beatconsistencyEMDtesting-checkpoint.ipynb
samples/: ReadMe.MD
sweeper/: audio_sweeper.py  dampening_sweeper.py  pitch_sweeper.py
tools/: audio_tools.py  blender_bvh_dampen.py  blender_bvh_splitter.py  bvh_splitter.py  bvh_tools.py  dampener.py  video.py
viz/: bvh_proc.py  kintree_constants.py  kp_smpl.py  smpl_viewer.py
vocal_features/: pitch_shifter.py  vocal_feature_intervention.py
