[project]
name = "gig-interveners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aitviewer>=1.13.0",
    "bpy>=4.0.0",
    "bvhio>=1.4.6",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "librosa>=0.10.2.post1",
    "marimo>=0.10.12",
    "numpy>=1.26.4",
    "praat-parselmouth>=0.4.5",
    "pysoundfile>=0.9.0.post1",
    "tyro>=0.9.8",
    "moderngl-window==2.4.6",
    "ruff>=0.9.1",
    "wasabi>=1.1.3",
    "scipy>=1.15.1",
    "scikit-learn>=1.6.1",
]
